# clawlexa

./: .gitignore  .repomixignore  .sops.yaml  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  main.py  package.json  pyproject.toml  repomix-voice-stack.xml  repomix.config.json  tts-mlx-audio.skill
.inspection/: relevant_files.md  session.json
.voiceclaw/: auth-profiles.example.json  voice.config.example.json
docs/: CODE_PATTERNS.md  COMPONENT_DEV.md  FRONTEND_REFACTOR_HANDOFF.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  PHASE_4_PROMPT.md  PHASE_5_PROMPT.md  README.md  SESSION_CENTRIC_REFACTOR_PLAN.md  SESSION_HIERARCHY_PLAN.md  VOICE_BENCHMARKS.md  VOICE_PROVIDER_INTEGRATION.md  conversation-management-openai.md  cost-management.md  sessions.md  tools-and-subagents.md
docs/voice-runtime/: ARCHITECTURE.md  README.md  (+2 more)
mac-daemon/: README.md  package-lock.json  package.json
pi-agent/: eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tui.json
playground/: README.md  pyproject.toml  ultravox_realtime.py
playground/kokoro-coreml/: bench.py  pyproject.toml  server_stream.py
playground/pipecat/: bench_stt_parakeet.py  pyproject.toml  stream_stt_mic.py
playground/qwen/: client_clone_stream_rt.py  client_stream_rt.py  create_voice.py  pyproject.toml  server_clone_stream.py  server_stream.py  server_voice_stream.py  test_generate.py  test_overlap.py
scripts/: check-runtime-provider-boundary.ts
tools/: tmux-opener.applescript
web/: CLAUDE.md  README.md  dev-server.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+188 files in other folders)
