[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "websockets>=15.0.1",
]
